Alterações de texto

--- a/src/components/projectcard/styles.css
+++ b/src/components/projectcard/styles.css
@@ -35,7 +35,7 @@
     font-family: 'Montserrat', sans-serif;
     color: #EFDDFD;
     font-size: 0.9em;
-    margin: 0 auto;
+    margin: 10px auto;
     width: 250px;
     text-align: center;
 }
