--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,12 @@ h1 {
   transition: 0.5s;
 }
 
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: #210934;
+  font-size: 1.5em;
+}
+
 h1:hover {
   color: #fff;
   cursor: pointer;
@@ -61,6 +67,11 @@ span:hover {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
 }
 
 @media(max-width: 1280px) {
