--- a/src/components/portfolio/styles.css
+++ b/src/components/portfolio/styles.css
@@ -5,22 +5,21 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .projects-container {
     margin: 0 auto;
     padding: 50px 0 50px 0;
     /* height: 100%; */
-    width: 80%;
+    width: 75%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
-}
-
-.break {
-    flex-basis: 100%;
-    height: 0;
 }
 
 @media (max-width:1280px) {
