--- a/src/components/portfolio/styles.css
+++ b/src/components/portfolio/styles.css
@@ -16,6 +16,7 @@
     padding: 50px 0 50px 0;
     /* height: 100%; */
     width: 75%;
+    max-width: 1920px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
