--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -2,16 +2,22 @@
     background-color: #333;
     background-image: url('../../assets/fundo-sobre.jpg');
     background-size: cover;
+    padding-top: 70px;
+}
+
+.profile-info {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
 .profile-container {
     color: #333;
-    min-height: 100vh;
+    min-height: calc(100vh - 100px);
     width: 80%;
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
 }
 
@@ -20,11 +26,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 50vh;
-    min-height: 70vh;
-    background: #210934;
+    width: 400px;
+    min-height: 600px;
+    border: #210934 2px solid;
+    background: #0e0416;
     padding: 30px;
-    border-radius: 50px;
+    border-radius: 20px;
     box-shadow: rgba(20, 20, 20, 0.2) 0px 7px 29px 0px;
 }
 
@@ -32,14 +39,14 @@
     width: 25vh;
     height: auto;
     border-radius: 50%;
-    border: 4px solid #A33AF2;
+    border: 4px solid #390660;
     transition: 0.5s;
     cursor: pointer;
 }
 
 .profile-image:hover {
     transform: scale(1.02);
-    border: 4px solid #fff;
+    border: 4px solid #550990;
 }
 
 .name-text {
@@ -47,46 +54,81 @@
     font-size: 1.5em;
     margin-top: 15px;
     color: #fff;
+    font-weight: bold;
 }
 
 .profile-text {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.1em;
-    color: #EFDDFD;
+    color: #fff;
     text-align: center;
     width: 80%;
     margin-top: 10px;
 }
 
+.buttons-line {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
 .profile-button {
-    width: 10vw;
-    height: 8vh;
-    border-radius: 15px;
+    width: 160px;
+    height: 45px;
+    border-radius: 10px;
     border: none;
-    background-color: #700CBC;
-    color: #EFDDFD;
-    font-size: 1vw;
+    background-color: #390660;
+    color: #fff;
+    font-size: 0.9em;
     font-family: 'Montserrat', sans-serif;
     margin-top: 20px;
     cursor: pointer;
-    transition: 0.5s;
+    transition: 0.2s;
+}
+
+.curriculum-button {
+    width: 350px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    background-color: #390660;
+    color: #fff;
+    font-size: 0.9em;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.download-icon {
+    width: 20px;
+    aspect-ratio: 1/1;
+    margin-right: 10px;
 }
 
 .profile-button:hover {
-    background-color: #EFDDFD;
-    color: #700CBC;
+    background-color: #550990;
+}
+
+.curriculum-button:hover {
+    background-color: #550990;
 }
 
 .about-divider {
     width: 100%;
-    border-top: .5px solid #A33AF2;
+    border-top: .5px solid #210934;
     margin: 20px 0;
 }
 
 .icons-container {
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
     justify-content: space-around;
+    width: 85%;
 }
 
 .icon-item {
@@ -96,25 +138,88 @@
     cursor: pointer;
 }
 
-.icon-item:hover {
-    transform: scale(1.02);
+.bio-container {
+    background-color: #0e0416;
+    border-radius: 20px;
+    padding: 10px 20px 10px 30px;
+    border: #210934 2px solid;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .profile-sinopse {
-    width: 40vw;
     font-family: 'Montserrat', sans-serif;
     color: #fff;
-    font-size: 17px;
+    font-size: 16px;
+}
+
+.subtitle-text {
+    font-family: 'Montserrat', sans-serif;
+    color: #f4e7fd;
+    font-size: 28px;
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+.abilities-title {
+    font-family: 'Montserrat', sans-serif;
+    color: #f4e7fd;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.certifications-container {
+    background-color: #0e0416;
+    border-radius: 20px;
+    padding: 10px 20px 10px 30px;
+    border: #210934 2px solid;
+    width: 800px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.certifications-text {
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    font-size: 18px;
+    margin-top: 0px;
+    line-height: 1.3;
+}
+
+.certifications-title {
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    font-size: 22px;
+    margin-top: 15px;
+    font-weight: 600;
+}
+
+.certifications-divider {
+    height: 1px;
+    background-color: #210934;
+    width: 90%;
+    align-self: center;
 }
 
 @media(max-width: 1280px) {
 
-    .profile-container {
-        padding: 50px 0 50px 0;
+    .about-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    .profile-content {
-        width: 100%;
+    .profile-container {
+        width: 90%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
     }
 
     .profile-card {
@@ -123,22 +228,67 @@
     }
 
     .profile-button {
-        width: 40vw;
-        height: 8vh;
-        font-size: 0.9em;
+        width: 120px;
+    }
+
+    .curriculum-button {
+        width: 255px;
     }
 
     .profile-sinopse {
-        width: 80vw;
-        margin-top: 5vh;
         text-align: center;
         font-family: 'Montserrat', sans-serif;
-        color: #EFDDFD;
+        color: #fff;
         font-size: 1em;
     }
 
     .icon-item {
         width: 60px;
         height: 100%;
+    }
+
+    .profile-info {
+        align-self: flex-end;
+        align-items: center;
+        width: 100%;
+    }
+
+    .bio-container {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+    }
+
+    .certifications-container {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .subtitle-text {
+        text-align: center;
+    }
+
+    .certifications-text {
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
+@media(max-width: 1910px) {
+    .profile-info {
+        align-items: center;
+        margin-left: 20px;
+    }
+
+    .bio-container {
+        max-width: 80%;
+    }
+
+    .certifications-container {
+        max-width: 80%;
     }
 }
