--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -256,6 +256,7 @@
     .bio-container {
         width: 80%;
         display: flex;
+        padding: 10px 25px;
         flex-direction: column;
         align-items: center;
         margin-top: 30px;
@@ -264,6 +265,7 @@
     .certifications-container {
         width: 80%;
         display: flex;
+        padding: 10px 25px;
         flex-direction: column;
         align-items: center;
     }
