--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -7,8 +7,10 @@
 
 .profile-info {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    min-height: 1200px;
 }
 
 .profile-container {
@@ -220,6 +222,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
+        border: 1px solid green;
     }
 
     .profile-card {
@@ -248,13 +251,13 @@
     }
 
     .profile-info {
-        align-self: flex-end;
         align-items: center;
         width: 100%;
+        border: 1px solid red;
     }
 
     .bio-container {
-        width: 80%;
+        width: 82.5%;
         display: flex;
         padding: 10px 25px;
         flex-direction: column;
@@ -263,7 +266,7 @@
     }
 
     .certifications-container {
-        width: 80%;
+        width: 82.5%;
         display: flex;
         padding: 10px 25px;
         flex-direction: column;
@@ -280,17 +283,19 @@
     }
 }
 
-@media(max-width: 1910px) {
+@media (max-width: 1910px) and (min-width: 1360px) {
     .profile-info {
         align-items: center;
-        margin-left: 20px;
+        margin-left: 15px;
+        min-height: 1125px;
+        width: 700px;
     }
 
     .bio-container {
-        max-width: 80%;
+        max-width: 90%;
     }
 
     .certifications-container {
-        max-width: 80%;
+        max-width: 90%;
     }
 }
