--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -5,12 +5,12 @@
     padding-top: 70px;
 }
 
+
 .profile-info {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    min-height: 1200px;
 }
 
 .profile-container {
@@ -19,7 +19,7 @@
     width: 80%;
     margin: 0 auto;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
 }
 
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: space-evenly;
     width: 400px;
-    min-height: 600px;
+    min-height: 1200px;
     border: #210934 2px solid;
     background: #0e0416;
     padding: 30px;
@@ -38,7 +38,7 @@
 }
 
 .profile-image {
-    width: 25vh;
+    width: 200px;
     height: auto;
     border-radius: 50%;
     border: 4px solid #390660;
@@ -177,11 +177,29 @@
     border-radius: 20px;
     padding: 10px 20px 10px 30px;
     border: #210934 2px solid;
-    width: 800px;
+    max-width: 800px;
+    height: 400px;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: center;
+    overflow-y: auto;
+}
+
+.experiences-container {
+    background-color: #0e0416;
+    border-radius: 20px;
+    padding: 10px 20px 10px 30px;
+    border: #210934 2px solid;
+    max-width: 800px;
+    height: 430px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    overflow-y: auto;
 }
 
 .certifications-text {
@@ -201,8 +219,7 @@
 }
 
 .certifications-divider {
-    height: 1px;
-    background-color: #210934;
+    border: 1px solid #210934;
     width: 90%;
     align-self: center;
 }
@@ -285,8 +302,12 @@
     .profile-info {
         align-items: center;
         margin-left: 15px;
-        min-height: 1125px;
+        min-height: 1200px;
         width: 700px;
+    }
+
+    .profile-card {
+        min-height: 1200px;
     }
 
     .bio-container {
