--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -286,6 +286,21 @@
         padding: 10px 25px;
         flex-direction: column;
         align-items: center;
+        height: 550px;
+    }
+
+    .experiences-container {
+        width: 82.5%;
+        display: flex;
+        padding: 10px 25px;
+        flex-direction: column;
+        align-items: center;
+        height: 650px;
+    }
+
+    .certifications-title {
+        text-align: center;
+        width: 100%;
     }
 
     .subtitle-text {
