--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -5,18 +5,11 @@
     padding-top: 70px;
 }
 
-
-.profile-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
 .profile-container {
     color: #333;
     min-height: calc(100vh - 100px);
-    width: 80%;
+    width: 100%;
+    max-width: 1920px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -29,11 +22,11 @@
     align-items: center;
     justify-content: space-evenly;
     width: 400px;
-    min-height: 1200px;
+    height: 1200px;
     border: #210934 2px solid;
     background: #0e0416;
     padding: 30px;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: rgba(20, 20, 20, 0.2) 0px 7px 29px 0px;
 }
 
@@ -126,6 +119,13 @@
     margin: 20px 0;
 }
 
+.abilities-title {
+    font-family: 'Montserrat', sans-serif;
+    color: #f4e7fd;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
 .icons-container {
     display: flex;
     flex-wrap: wrap;
@@ -140,15 +140,26 @@
     cursor: pointer;
 }
 
+.profile-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 60%;
+    height: 1260px;
+}
+
 .bio-container {
     background-color: #0e0416;
-    border-radius: 20px;
-    padding: 10px 20px 10px 30px;
+    border-radius: 10px;
     border: #210934 2px solid;
-    max-width: 800px;
+    width: 100%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
 .profile-sinopse {
@@ -161,67 +172,8 @@
     font-family: 'Montserrat', sans-serif;
     color: #f4e7fd;
     font-size: 28px;
-    margin-top: 15px;
     font-weight: bold;
-}
-
-.abilities-title {
-    font-family: 'Montserrat', sans-serif;
-    color: #f4e7fd;
-    font-size: 20px;
-    margin-bottom: 15px;
-}
-
-.certifications-container {
-    background-color: #0e0416;
-    border-radius: 20px;
-    padding: 10px 20px 10px 30px;
-    border: #210934 2px solid;
-    max-width: 800px;
-    height: 400px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    overflow-y: auto;
-}
-
-.experiences-container {
-    background-color: #0e0416;
-    border-radius: 20px;
-    padding: 10px 20px 10px 30px;
-    border: #210934 2px solid;
-    max-width: 800px;
-    height: 430px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    overflow-y: auto;
-}
-
-.certifications-text {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    font-size: 18px;
-    margin-top: 0px;
-    line-height: 1.3;
-}
-
-.certifications-title {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    font-size: 22px;
-    margin-top: 15px;
-    font-weight: 600;
-}
-
-.certifications-divider {
-    border: 1px solid #210934;
-    width: 90%;
-    align-self: center;
+    width: 100%;
 }
 
 @media(max-width: 1280px) {
@@ -242,8 +194,9 @@
     }
 
     .profile-card {
+        box-sizing: border-box;
         margin: 0 auto;
-        width: 80%;
+        width: 100%;
     }
 
     .profile-button {
@@ -267,69 +220,24 @@
     }
 
     .profile-info {
+        display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: space-evenly;
         width: 100%;
+        height: auto;
+        padding-top: 50px;
     }
 
     .bio-container {
-        width: 82.5%;
-        display: flex;
-        padding: 10px 25px;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 30px;
-    }
-
-    .certifications-container {
-        width: 82.5%;
-        display: flex;
-        padding: 10px 25px;
-        flex-direction: column;
-        align-items: center;
-        height: 550px;
-    }
-
-    .experiences-container {
-        width: 82.5%;
-        display: flex;
-        padding: 10px 25px;
-        flex-direction: column;
-        align-items: center;
-        height: 650px;
-    }
-
-    .certifications-title {
-        text-align: center;
         width: 100%;
+        display: flex;
+        padding: 10px 25px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .subtitle-text {
         text-align: center;
-    }
-
-    .certifications-text {
-        text-align: center;
-        margin-top: 10px;
-    }
-}
-
-@media (max-width: 1910px) and (min-width: 1360px) {
-    .profile-info {
-        align-items: center;
-        margin-left: 15px;
-        min-height: 1200px;
-        width: 700px;
-    }
-
-    .profile-card {
-        min-height: 1200px;
-    }
-
-    .bio-container {
-        max-width: 90%;
-    }
-
-    .certifications-container {
-        max-width: 90%;
     }
 }
